<resources>
    <string name="app_name">BluetoothArduino</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_control">Control</string>
    <string name="Temperature">Temperature</string>
    <string name="Light">Light</string>
    <string name="Humidity">Humidity</string>
    <string name="forward">Forward</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="horn">horn</string>
    <string name="backward">Backward</string>
    <string name="reverse">Reverse</string>
    <string name="title_activity_bluetooth_example">BluetoothActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="Connect">Connect</string>
    <string name="light">Lights</string>
    <string name="title_activity_automatic">Automatic</string>
    <string name="title_activity_slave">SlaveActivity</string>
</resources>
