<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luc.bluetooth.BluetoothActivity"

    android:id="@+id/mainContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/open"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Connect"
                android:onClick="findBT"
                android:background="#0000FF"
                android:textColor="#FFFFFF"
                />
            <Button
                android:id="@+id/automatic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Automate"
                android:layout_marginLeft="3dp"
                android:onClick="automateControl"
                android:background="#0000FF"
                android:textColor="#FFFFFF"
                />
            <Button
                android:id="@+id/btnSlave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Slave Mode"

                android:layout_marginLeft="3dp"
                android:onClick="Slave"
                android:background="#0000FF"
                android:textColor="#FFFFFF"
                />
</LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:text="@string/Temperature" />

                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.30"
                    android:text=": No data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:text="@string/Light" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_weight="1"
                    android:max="1000" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:text="Distance" />

                <TextView
                    android:id="@+id/txtHumidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.30"
                    android:text="No data" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:src="@drawable/pics"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#D8D8D8" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnForward"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forward"
                    android:background="#0000FF"
                    android:textColor="#FFFFFF"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" >
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnLeft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left"

                    android:background="#0000FF"
                    android:textColor="#FFFFFF"
                    />
                <Button
                    android:id="@+id/btnHorn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/horn"


                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    />
                <Button
                    android:id="@+id/btnLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/light"


                    android:background="#FFFFFF"
                    android:textColor="#000000"
                    />
                <Button
                    android:id="@+id/btnRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right"
                    android:background="#0000FF"
                    android:textColor="#FFFFFF"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" >
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnReverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reverse"
                    android:background="#0000FF"
                    android:textColor="#FFFFFF"
                    />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>
</LinearLayout>
